--- a/LifeCalculator/res/layout/main29.xml
+++ b/LifeCalculator/res/layout/main29.xml
@@ -1,22 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="51dp"
-        android:layout_marginRight="41dp"
-        android:layout_toLeftOf="@+id/button2"
-        android:text="上一页" />
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
@@ -24,9 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="46dp"
-        android:text="1、你的性别是" />
+        android:layout_marginLeft="46dp"
+        android:layout_marginTop="38dp"
+        android:text="30、你排便是否规律" />
 
     <RadioGroup
         android:id="@+id/radioGroup1"
@@ -34,26 +20,34 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="36dp" >
+        android:layout_marginTop="28dp" >
 
         <RadioButton
             android:id="@+id/radio0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="男" />
+            android:text="是" />
 
         <RadioButton
             android:id="@+id/radio1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="女" />
-
-        
+            android:text="不是" />
+         
     </RadioGroup>
 
     <Button
-        android:id="@+id/button0"
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioGroup1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="34dp"
+        android:text="上一页" />
+
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
