--- a/Login/res/layout/registertab.xml
+++ b/Login/res/layout/registertab.xml
@@ -3,6 +3,7 @@
     android:id="@+id/registerTab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
     <EditText 
         android:layout_width="match_parent"
@@ -32,10 +33,19 @@
             android:layout_height="wrap_content" 
             android:text="女"/>   
     </RadioGroup>
-    <EditText 
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入出生年月日"/>
+        android:text="请选择出生年月日"
+        android:textSize="20sp"/>
+    <DatePicker android:id="@+id/datePicker"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/> 
+    <TextView
+        android:id="@+id/showTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
     <Button 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
